--- a/style.css
+++ b/style.css
@@ -1,7 +1,76 @@
-h1 {
-    font-size: 300px;
+
+/* Reset */
+* {
+    margin: 0;
+    padding: 0;
 }
 
-.hs{
-    font-size: 300px
+/* All */
+h1 {
+    font-size: 51px;
+}
+
+.maincontainer {
+    display: flex;
+    flex-flow: column wrap;
+    
+}
+
+/* Navigation */
+.navbar {
+    padding: 0 3%;
+    background-color: aliceblue;
+}
+
+.navbar h2 {
+    padding: 6px 0;
+}
+
+.navbar h2 a {
+    text-decoration: none;
+    color: dodgerblue;
+}
+
+
+ul.closed {
+    display: none;
+}
+
+.navbar ul li {
+    list-style-type: none;
+    padding: 10px 0;
+}
+
+.navbar ul li a {
+    display: block;
+    text-decoration: none;
+    color: dodgerblue;
+}
+
+/* Article */
+.articlecontainer {
+    
+    background-color: beige;
+    padding: 0 2% 0 3%;
+    padding-bottom: 10px;
+}
+
+article {
+    padding-top: 20px;
+}
+
+article img {
+    width: 100%;    
+}
+
+footer {
+    margin-top: 15px;
+}
+
+footer img {
+    float: left;
+    padding-right: 15px;    
+}
+
+.description {
 }
