--- a/style.css
+++ b/style.css
@@ -1,25 +1,115 @@
-
 /* Reset */
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-/* All */
+/* General */
 h1 {
     font-size: 51px;
 }
 
-.maincontainer {
+/* Button */
+.btn {
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    margin: 5px;
+    z-index: 99;
+}
+
+.btn:hover {
+    background-color: rgba(255, 235, 205, 0.5);
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
+}
+
+#myInput {
+    padding: 5px 5px 5px 15px;
+    border: none;
+    border-bottom: 1px solid #ddd;
+}
+
+#myInput:focus {
+    outline: 1px solid #ddd;
+}
+
+.dropdown {
+    /* position: relative; */
+    display: inline-block;
+}
+
+.dropDownContent {
+    /* position: absolute; */
+    background-color: #f6f6f6;
+    min-width: 100px;
+    overflow: auto;
+    border: 1px solid #ddd;
+    z-index: 1;
+    display: none;
+}
+
+.dropDownContent a {
+    text-decoration: none;
+    padding: 12px 16px;
+    display: block;
+    color: black;
+}
+
+.dropDownContent a:hover {
+    background-color: #ddd;
+}
+
+.show {
+    display: block;
+}
+
+/* Layout grid */
+.firstcontainer {
+    display: grid;
+    grid-row-gap: 10px;
+}
+
+/* Logo */
+.logo {
     display: flex;
-    flex-flow: column wrap;
-    
+    justify-content: center;
+    background-color: aliceblue;
+}
+
+#logoTop {
+    background-color: rgb(183, 202, 202);
+    padding: 5px;
+    border-radius: 5px;
+    width: 56.5%;
+    text-align: center;
+    align-self: center;
+    margin: 5px 0;
+}
+
+#logoTop a {
+    display: block;
+    text-decoration: none;
+    color: rgb(76, 83, 83);
+}
+
+#hamburger {
+    position: absolute;
+    right: 12px;
+    top: 4px;
+    font-size: 28px;
+    color: rgb(76, 83, 83);
 }
 
 /* Navigation */
 .navbar {
     padding: 0 3%;
     background-color: aliceblue;
+    width: 100%;
+    text-align: center;
+    position: relative;
 }
 
 .navbar h2 {
@@ -31,46 +121,222 @@ h1 {
     color: dodgerblue;
 }
 
-
-ul.closed {
-    display: none;
+.navbar ul {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .navbar ul li {
     list-style-type: none;
     padding: 10px 0;
+    background-color: aqua;
+    width: 60%;
+    text-align: center;
+    align-self: center;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    position: relative;
 }
 
 .navbar ul li a {
     display: block;
     text-decoration: none;
     color: dodgerblue;
+    margin-right: auto;
 }
 
-/* Article */
-.articlecontainer {
-    
-    background-color: beige;
-    padding: 0 2% 0 3%;
-    padding-bottom: 10px;
+.navbar ul li button {
+    position: absolute;
+    top: 1px;
+    right: -30px;
 }
 
-article {
-    padding-top: 20px;
+ul.closed {
+    display: none;
 }
 
-article img {
-    width: 100%;    
+/* Main */
+.maincontainer {
+    background-color: rgb(238, 238, 202);
+    padding: 16px 2% 16px 3%;
+    width: 100%;
+    /* margin-bottom: 16px; */
 }
 
+.photo {
+    text-align: center;
+    border: 2px solid olive;
+    border-radius: 22px;
+    padding: 5px;
+    margin-bottom: 8px;
+}
+
+.photo img {
+    max-width: 100%;
+    border-radius: 15px 15px 0 0;
+}
+
+.photo h2 {
+    background-color: black;
+    color: white;
+    border-radius: 0 0 15px 15px;
+}
+
+/* Footer */
 footer {
-    margin-top: 15px;
+    background-color: rgb(205, 224, 166);
+    padding: 0 2% 0 3%;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    text-align: center;
 }
 
 footer img {
-    float: left;
-    padding-right: 15px;    
+    width: 220px;
+    border: 2px solid grey;
+    border-radius: 20px;
+    height: auto;
+    position: relative;
+    top: -5px;
+    left: -18%;
+    z-index: 2;
 }
 
-.description {
+footer .description {
+    width: 90%;
+    background-color: white;
+    border-radius: 10px;
+    position: relative;
+    right: -10%;
+}
+
+
+@media screen and (min-width: 470px) {
+
+    body {
+        width: 90%;
+        float: right;
+    }
+
+    .header {
+        display: flex;
+    }
+
+    /* Layout grid */
+    .firstcontainer {}
+
+    /* Logo */
+    #logoTop {
+        width: 150px;
+        margin-right: 5%;
+    }
+
+    /* Navigation */
+    #hamburger {
+        display: none;
+    }
+
+    .navbar ul {
+        display: flex;
+        flex-direction: row;
+        flex: 1 1 150px;
+    }
+
+    .navbar ul li {
+        border-radius: 5px;
+        margin: 0;
+        margin-right: 5%;
+    }
+
+    ul.closed {
+        display: inline-block;
+    }
+
+    /* Main */
+
+    .photo {
+        width: 60%;
+        margin: 0 auto;
+        margin-top: 15px;
+        margin-bottom: 10px;
+    }
+
+    /* Footer */
+    .footercontainer {
+        display: flex;
+    }
+
+    footer img {
+        top: -38px;
+        left: -10%;
+    }
+
+    footer .description {
+        right: 5px;
+        text-align: right;
+        padding-right: 16px;
+    }
+
+}
+
+@media screen and (min-width: 850px) {
+    body {
+        width: 100%;
+        float: none;
+    }
+
+    .firstcontainer {
+        grid-template-rows: auto;
+        grid-template-columns: 1fr 3fr;
+        grid-column-gap: 10px;
+        grid-template-areas:
+            "head ."
+            "head main"
+            "foot foot";
+    }
+
+    /* Empty cell styling */
+    .firstcontainer::after {
+        content: "";
+        grid-column: 2;
+        grid-row: 1;
+        height: 38px;
+    }
+
+    .navbar {
+        height: 100%;
+    }
+
+    .navbar ul {
+        height: 100%;
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-columns: 1fr;
+        grid-row-gap: 10px;
+        justify-items: center;
+        align-content: stretch;
+    }
+
+    .logo {
+        grid-area: logo;
+    }
+
+    header {
+        grid-area: head;
+        flex-direction: column;
+    }
+
+    .maincontainer {
+        grid-area: main;
+    }
+
+    footer {
+        grid-area: foot;
+    }
+
+    footer img {
+        top: -25px;
+        left: -8%;
+    }
 }
